# gpusched

./: .gitignore  .goreleaser.yml  Makefile  README.md  go.mod  install.sh
.github/workflows/: ci.yml  release.yml
cmd/gpusched/: main.go
examples/: model_worker.py
internal/checkpoint/: checkpoint.go  checkpoint_test.go
internal/client/: client.go
internal/daemon/: daemon.go  daemon_test.go  server.go
internal/gpu/: gpu.go  gpu_test.go
internal/protocol/: protocol.go  protocol_test.go
internal/tui/: tui.go
sdk/python/: README.md  pyproject.toml
sdk/python/gpusched/: __init__.py  client.py
sdk/python/tests/: test_client.py  test_integration.py
