[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpusched"
version = "0.1.0"
description = "Python client for gpusched — the GPU Process Manager"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "Shayon Mukherjee" }]
keywords = ["gpu", "cuda", "checkpoint", "process-manager", "ml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Systems Administration",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/shayonj/gpusched"
Repository = "https://github.com/shayonj/gpusched"
Issues = "https://github.com/shayonj/gpusched/issues"

[tool.pytest.ini_options]
markers = [
    "integration: tests that require a running gpusched daemon",
]
